Closed
Bug 1362793
Opened 8 years ago
Closed 8 years ago
Intermittent dom/media/test/test_media_selection.html | seek-short.webm duration (NaN) should be around 0.23
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| fennec | + | --- |
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: alwu)
References
(Blocks 1 open bug)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [fennec-scouting] [stockwell fixed:product])
Attachments
(2 files)
Filed by: bclary [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=96905377&repo=mozilla-central
https://autophone.s3.amazonaws.com/v1/task/MYo3v6ReTTSl-H8nuN4eDA/runs/0/artifacts/public/build/mochitest-dom-media-mochitests-dom-media-settings-opt.ini-1-nexus-6-1-05f43099-3e46-4b89-98cf-20c0ebaafcc1.log
Android 5.1 only Regression which first appeared on mozilla-central during the merge:
https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&revision=8872ad4d52b6b517dc9d2a9f62c5c75ceda18790&filter-searchStr=autophone
Updated•8 years ago
|
tracking-fennec: --- → ?
Has Regression Range: --- → yes
Keywords: regression
OS: Unspecified → Android
Hardware: Unspecified → ARM
Summary: Intermittent dom/media/test/test_media_selection.html | seek-short.webm duration (NaN) should be around 0.23 → dom/media/test/test_media_selection.html | seek-short.webm duration (NaN) should be around 0.23
| Comment hidden (Intermittent Failures Robot) |
Updated•8 years ago
|
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
status-firefox55:
--- → affected
Comment 2•8 years ago
|
||
This isn't intermittent on Android 5.1 but it doesn't appear in the suggested bugs in Treeherder. Adding it to see if that helps with matching.
Summary: dom/media/test/test_media_selection.html | seek-short.webm duration (NaN) should be around 0.23 → Intermittent dom/media/test/test_media_selection.html | seek-short.webm duration (NaN) should be around 0.23
Comment 3•8 years ago
|
||
(In reply to Bob Clary [:bc:] from comment #2)
> This isn't intermittent on Android 5.1 but it doesn't appear in the
> suggested bugs in Treeherder. Adding it to see if that helps with matching.
i guess you have to set the keyword too
Keywords: intermittent-failure
tracking-fennec: ? → +
Updated•8 years ago
|
Whiteboard: [fennec-scouting]
| Comment hidden (Intermittent Failures Robot) |
Comment 5•8 years ago
|
||
:bc - do you have a plan here? Disable on 5.1?
Flags: needinfo?(bob)
Whiteboard: [fennec-scouting] → [fennec-scouting] [stockwell needswork]
Comment 6•8 years ago
|
||
I'd rather not. I'd like to find who regressed this and get them to fix it or back it out. That is *way* down my list of things to do however.
Flags: needinfo?(bob)
Comment 7•8 years ago
|
||
This test is perma-fail on autophone Android 5.1, on mozilla-central, since https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&revision=8872ad4d52b6b517dc9d2a9f62c5c75ceda18790. There are lots of changes in that merge but I wonder if this might be related to the changes for bug 1357639.
:alwu - what do you think?
Flags: needinfo?(alwu)
| Assignee | ||
Comment 8•8 years ago
|
||
No, the bug 1357639 is just adding new robocop test, it won't affect the DOM media test. But I can investigate it later, keep NI.
| Assignee | ||
Comment 9•8 years ago
|
||
I think the fail might be caused by bug1361944, but I'm still looking for root cause.
Assignee: nobody → alwu
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 11•8 years ago
|
||
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 14•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8868936 [details]
Bug 1362793 - part1 : shouldn't shutdown decoder too early.
https://reviewboard.mozilla.org/r/140586/#review144402
Attachment #8868936 -
Flags: review?(jwwang) → review+
Comment 15•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8869298 [details]
Bug 1362793 - part2 : add test.
https://reviewboard.mozilla.org/r/140854/#review144404
P1 and P2 should be combined. Also add a new test case to ensuer we don't regress it in the future.
The test case involes a special file where decoding errors will be encountered after decoding metadata. We test the duration when 'error' is fired.
Attachment #8869298 -
Flags: review?(jwwang) → review+
| Assignee | ||
Comment 16•8 years ago
|
||
(In reply to JW Wang [:jwwang] [:jw_wang] from comment #15)
> The test case involes a special file where decoding errors will be
> encountered after decoding metadata. We test the duration when 'error' is
> fired.
Do you know how to generate that kind file?
Thanks!
Flags: needinfo?(jwwang)
Comment 17•8 years ago
|
||
No. Maybe kilik knows how to use ffmpeg to generate a file like that.
Flags: needinfo?(jwwang) → needinfo?(kikuo)
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 21•8 years ago
|
||
| Assignee | ||
Comment 22•8 years ago
|
||
Comment on attachment 8869298 [details]
Bug 1362793 - part2 : add test.
Add test.
Attachment #8869298 -
Flags: review+ → review?(jwwang)
Comment 23•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8869298 [details]
Bug 1362793 - part2 : add test.
https://reviewboard.mozilla.org/r/140854/#review144416
::: dom/media/test/manifest.js:1510
(Diff revision 2)
> }
> is(!!test.keys, SpecialPowers.do_lookupGetter(e, "isEncrypted").apply(e),
> msg + " isEncrypted should be true if we have decryption keys");
> }
>
> +function checkDuration(msg, e, test) {
Move this function into the .html since it has no other users.
::: dom/media/test/mochitest.ini:727
(Diff revision 2)
> [test_decode_error.html]
> [test_decoder_disable.html]
> [test_defaultMuted.html]
> [test_delay_load.html]
> skip-if = android_version == '17' # android(bug 1232305)
> +[test_duration_check_after_error.html]
Call it test_duration_after_error.html
Attachment #8869298 -
Flags: review?(jwwang) → review+
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 26•8 years ago
|
||
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/940792ff8b54
part1 : shouldn't shutdown decoder too early. r=jwwang
https://hg.mozilla.org/integration/autoland/rev/8d2ae9e042aa
part2 : add test. r=jwwang
Comment 27•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/940792ff8b54
https://hg.mozilla.org/mozilla-central/rev/8d2ae9e042aa
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Comment hidden (Intermittent Failures Robot) |
Updated•8 years ago
|
status-firefox-esr52:
--- → unaffected
Updated•8 years ago
|
Whiteboard: [fennec-scouting] [stockwell needswork] → [fennec-scouting] [stockwell fixed:product]
You need to log in
before you can comment on or make changes to this bug.
Description
•